// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View should render a CSV data-source page 1`] = `
<div>
  <div
    class="settings-root"
  >
    <nav
      class="bg-white mb-4 tbar component-tbar"
    >
      <ul
        class="mx-4 tbar-nav"
      >
        <li
          class="tbar-item"
        >
          <div
            class="component-action"
          >
            <a
              aria-label="Back"
              class="text-secondary"
              href="/workspace/23"
            >
              <svg
                class="lexicon-icon lexicon-icon-angle-left mb-1"
                role="presentation"
              >
                <use
                  href="#angle-left"
                />
              </svg>
            </a>
          </div>
        </li>
        <li
          class="pl-0 tbar-item"
        >
          <div
            class="tbar-section"
          >
            <span
              class="text-dark"
            >
              <span
                class="text-5 font-weight-bold"
              >
                Settings
              </span>
            </span>
          </div>
        </li>
      </ul>
    </nav>
    <div
      class="content-wrapper"
    >
      <nav
        class="section-side settings-side-bar"
      >
        <div>
          <h5
            class="section-title"
          >
            Workspace Data
          </h5>
          <ul
            class="nav"
          >
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/apis/tokens"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_api icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_api"
                    />
                  </svg>
                </span>
                APIs
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/definitions"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-definitions icon-root"
                    role="presentation"
                  >
                    <use
                      href="#definitions"
                    />
                  </svg>
                </span>
                Definitions
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/data-privacy"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-data_privacy_lock icon-root"
                    role="presentation"
                  >
                    <use
                      href="#data_privacy_lock"
                    />
                  </svg>
                </span>
                Data Control & Privacy
              </a>
            </li>
            <li
              class="item active"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/data-source"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-faro_data_source icon-root"
                    role="presentation"
                  >
                    <use
                      href="#faro_data_source"
                    />
                  </svg>
                </span>
                Data Sources
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/recommendations"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_star icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_star"
                    />
                  </svg>
                </span>
                Recommendations
              </a>
            </li>
          </ul>
        </div>
        <div>
          <h5
            class="section-title"
          >
            Workspace Settings
          </h5>
          <ul
            class="nav"
          >
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/users"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-user_management icon-root"
                    role="presentation"
                  >
                    <use
                      href="#user_management"
                    />
                  </svg>
                </span>
                User Management
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/properties"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_page icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_page"
                    />
                  </svg>
                </span>
                Properties
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/usage"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-usage icon-root"
                    role="presentation"
                  >
                    <use
                      href="#usage"
                    />
                  </svg>
                </span>
                Subscription & Usage
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/workspace"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-cog icon-root"
                    role="presentation"
                  >
                    <use
                      href="#cog"
                    />
                  </svg>
                </span>
                Workspace
              </a>
            </li>
          </ul>
        </div>
      </nav>
      <div
        class="content section-main"
      >
        <div
          class="settings-base-page-root csv-data-source-root"
        >
          <div
            class="maintenance-alert-root"
          />
          <ol
            class="breadcrumb breadcrumbs-root"
          >
            <li
              class="breadcrumb-item"
            >
              <a
                class="breadcrumb-text-truncate breadcrumb-link"
                href="/workspace/23/settings/data-source"
              >
                Data Sources
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <span
                class="breadcrumb-text-truncate"
              >
                CSV1
              </span>
            </li>
          </ol>
          <div>
            <div
              class="sheet"
            >
              <div
                class="sheet-header header-content"
              >
                <div
                  class="page-title-group"
                >
                  <h3
                    class="w-50"
                  >
                    <div
                      class="definition-item-root"
                    >
                      <div
                        class="d-flex align-items-center"
                      >
                        <span
                          class="text-truncate"
                          data-tooltip="false"
                          title=""
                        >
                          CSV1
                        </span>
                        <button
                          aria-label="Edit"
                          class="button-root btn btn-sm btn-secondary"
                          type="button"
                        >
                          <svg
                            class="lexicon-icon lexicon-icon-pencil icon-root"
                            role="presentation"
                          >
                            <use
                              href="#pencil"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </h3>
                  <div
                    class="button-row"
                  >
                    <a
                      class="button-root btn btn-primary"
                      href="/workspace/23/settings/data-source/24/edit"
                    >
                      Edit CSV
                    </a>
                    <a
                      class="button-root btn btn-primary"
                      href="/workspace/23/settings/data-source/24/delete"
                    >
                      Delete Data Source
                    </a>
                  </div>
                </div>
                <div
                  class="file-info"
                >
                  <div
                    class="definition-item-root"
                  >
                    <div
                      class="d-flex align-items-center"
                    >
                      -
                    </div>
                  </div>
                  <button
                    class="button-root toggle-preview btn btn-sm btn-primary"
                    display="secondary"
                    type="button"
                  >
                    View File Preview
                  </button>
                </div>
              </div>
              <div
                class="sheet-body"
              >
                <h3
                  class="mappings-header"
                >
                  Current Mappings
                </h3>
              </div>
              <div
                class="data-transformation-list-root read-only"
              >
                <div
                  class="data-transformation-header"
                >
                  <div
                    class="left"
                  >
                    CSV Field
                  </div>
                  <div
                    class="right"
                  >
                    Analytics Cloud Field
                  </div>
                </div>
                <div
                  class="form-group data-transformation-item-root form-group-autofit"
                >
                  <div
                    class="form-group-item"
                  >
                    <div>
                      <div
                        class="dropdown searchable-select-root"
                      >
                        <button
                          aria-controls="clay-dropdown-menu-1"
                          aria-expanded="false"
                          aria-haspopup="true"
                          class="dropdown-toggle button-root d-flex align-items-center justify-content-between w-100 btn btn-unstyled"
                          type="button"
                        >
                          Test0
                          <svg
                            class="lexicon-icon lexicon-icon-caret-bottom icon-root ml-2"
                            role="presentation"
                          >
                            <use
                              href="#caret-bottom"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="example-value text-truncate"
                      >
                        value
                      </div>
                    </div>
                  </div>
                  <div
                    class="form-group-item add-on form-group-item-shrink"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-faro_connection_success_ovals icon-root"
                      role="presentation"
                    >
                      <use
                        href="#faro_connection_success_ovals"
                      />
                    </svg>
                  </div>
                  <div
                    class="form-group-item"
                  >
                    <div
                      class="suggestion"
                    >
                      <div
                        class="dropdown searchable-select-root"
                      >
                        <button
                          aria-controls="clay-dropdown-menu-2"
                          aria-expanded="false"
                          aria-haspopup="true"
                          class="dropdown-toggle button-root d-flex align-items-center justify-content-between w-100 btn btn-unstyled"
                          type="button"
                        >
                          MappingName
                          <svg
                            class="lexicon-icon lexicon-icon-caret-bottom icon-root ml-2"
                            role="presentation"
                          >
                            <use
                              href="#caret-bottom"
                            />
                          </svg>
                        </button>
                      </div>
                      <div
                        class="example-value text-truncate"
                      >
                        mappingValue
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`View should render a Liferay data-source old page 1`] = `
<div>
  <div
    class="settings-root"
  >
    <nav
      class="bg-white mb-4 tbar component-tbar"
    >
      <ul
        class="mx-4 tbar-nav"
      >
        <li
          class="tbar-item"
        >
          <div
            class="component-action"
          >
            <a
              aria-label="Back"
              class="text-secondary"
              href="/workspace/23"
            >
              <svg
                class="lexicon-icon lexicon-icon-angle-left mb-1"
                role="presentation"
              >
                <use
                  href="#angle-left"
                />
              </svg>
            </a>
          </div>
        </li>
        <li
          class="pl-0 tbar-item"
        >
          <div
            class="tbar-section"
          >
            <span
              class="text-dark"
            >
              <span
                class="text-5 font-weight-bold"
              >
                Settings
              </span>
            </span>
          </div>
        </li>
      </ul>
    </nav>
    <div
      class="content-wrapper"
    >
      <nav
        class="section-side settings-side-bar"
      >
        <div>
          <h5
            class="section-title"
          >
            Workspace Data
          </h5>
          <ul
            class="nav"
          >
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/apis/tokens"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_api icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_api"
                    />
                  </svg>
                </span>
                APIs
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/definitions"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-definitions icon-root"
                    role="presentation"
                  >
                    <use
                      href="#definitions"
                    />
                  </svg>
                </span>
                Definitions
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/data-privacy"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-data_privacy_lock icon-root"
                    role="presentation"
                  >
                    <use
                      href="#data_privacy_lock"
                    />
                  </svg>
                </span>
                Data Control & Privacy
              </a>
            </li>
            <li
              class="item active"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/data-source"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-faro_data_source icon-root"
                    role="presentation"
                  >
                    <use
                      href="#faro_data_source"
                    />
                  </svg>
                </span>
                Data Sources
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/recommendations"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_star icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_star"
                    />
                  </svg>
                </span>
                Recommendations
              </a>
            </li>
          </ul>
        </div>
        <div>
          <h5
            class="section-title"
          >
            Workspace Settings
          </h5>
          <ul
            class="nav"
          >
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/users"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-user_management icon-root"
                    role="presentation"
                  >
                    <use
                      href="#user_management"
                    />
                  </svg>
                </span>
                User Management
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/properties"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_page icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_page"
                    />
                  </svg>
                </span>
                Properties
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/usage"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-usage icon-root"
                    role="presentation"
                  >
                    <use
                      href="#usage"
                    />
                  </svg>
                </span>
                Subscription & Usage
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/workspace"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-cog icon-root"
                    role="presentation"
                  >
                    <use
                      href="#cog"
                    />
                  </svg>
                </span>
                Workspace
              </a>
            </li>
          </ul>
        </div>
      </nav>
      <div
        class="content section-main"
      >
        <div
          class="settings-base-page-root data-source-base-page-root"
        >
          <div
            class="maintenance-alert-root"
          />
          <ol
            class="breadcrumb breadcrumbs-root"
          >
            <li
              class="breadcrumb-item"
            >
              <a
                class="breadcrumb-text-truncate breadcrumb-link"
                href="/workspace/23/settings/data-source"
              >
                Data Sources
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <span
                class="breadcrumb-text-truncate breadcrumb-link"
              >
                Liferay1
              </span>
            </li>
          </ol>
          <div
            class="content-header"
          >
            <div
              class="header-text"
            >
              <div
                class="d-flex"
              >
                <h3
                  class="title-text text-truncate"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    Configure Liferay DXP
                  </span>
                </h3>
              </div>
              <div
                class="description"
              >
                Liferay1 - https://www.faro-1.io
              </div>
            </div>
            <div
              class="page-actions-container"
            />
          </div>
          <div>
            <div
              class="page-container"
            >
              <div
                class="content-main"
              />
              <div
                class="content-side"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`View should render a Liferay data-source page 1`] = `
<div>
  <div
    class="settings-root"
  >
    <nav
      class="bg-white mb-4 tbar component-tbar"
    >
      <ul
        class="mx-4 tbar-nav"
      >
        <li
          class="tbar-item"
        >
          <div
            class="component-action"
          >
            <a
              aria-label="Back"
              class="text-secondary"
              href="/workspace/23"
            >
              <svg
                class="lexicon-icon lexicon-icon-angle-left mb-1"
                role="presentation"
              >
                <use
                  href="#angle-left"
                />
              </svg>
            </a>
          </div>
        </li>
        <li
          class="pl-0 tbar-item"
        >
          <div
            class="tbar-section"
          >
            <span
              class="text-dark"
            >
              <span
                class="text-5 font-weight-bold"
              >
                Settings
              </span>
            </span>
          </div>
        </li>
      </ul>
    </nav>
    <div
      class="content-wrapper"
    >
      <nav
        class="section-side settings-side-bar"
      >
        <div>
          <h5
            class="section-title"
          >
            Workspace Data
          </h5>
          <ul
            class="nav"
          >
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/apis/tokens"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_api icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_api"
                    />
                  </svg>
                </span>
                APIs
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/definitions"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-definitions icon-root"
                    role="presentation"
                  >
                    <use
                      href="#definitions"
                    />
                  </svg>
                </span>
                Definitions
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/data-privacy"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-data_privacy_lock icon-root"
                    role="presentation"
                  >
                    <use
                      href="#data_privacy_lock"
                    />
                  </svg>
                </span>
                Data Control & Privacy
              </a>
            </li>
            <li
              class="item active"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/data-source"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-faro_data_source icon-root"
                    role="presentation"
                  >
                    <use
                      href="#faro_data_source"
                    />
                  </svg>
                </span>
                Data Sources
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/recommendations"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_star icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_star"
                    />
                  </svg>
                </span>
                Recommendations
              </a>
            </li>
          </ul>
        </div>
        <div>
          <h5
            class="section-title"
          >
            Workspace Settings
          </h5>
          <ul
            class="nav"
          >
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/users"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-user_management icon-root"
                    role="presentation"
                  >
                    <use
                      href="#user_management"
                    />
                  </svg>
                </span>
                User Management
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/properties"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_page icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_page"
                    />
                  </svg>
                </span>
                Properties
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/usage"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-usage icon-root"
                    role="presentation"
                  >
                    <use
                      href="#usage"
                    />
                  </svg>
                </span>
                Subscription & Usage
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/workspace"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-cog icon-root"
                    role="presentation"
                  >
                    <use
                      href="#cog"
                    />
                  </svg>
                </span>
                Workspace
              </a>
            </li>
          </ul>
        </div>
      </nav>
      <div
        class="content section-main"
      >
        <div
          class="settings-base-page-root data-source-base-page-root"
        >
          <div
            class="maintenance-alert-root"
          />
          <ol
            class="breadcrumb breadcrumbs-root"
          >
            <li
              class="breadcrumb-item"
            >
              <a
                class="breadcrumb-text-truncate breadcrumb-link"
                href="/workspace/23/settings/data-source"
              >
                Data Sources
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <span
                class="breadcrumb-text-truncate"
              >
                Liferay123
              </span>
            </li>
          </ol>
          <div
            class="content-header"
          >
            <div
              class="header-text"
            >
              <div
                class="d-flex"
              >
                <h3
                  class="title-text text-truncate"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    Liferay123
                  </span>
                </h3>
              </div>
              <div
                class="description"
              >
                https://www.faro-123.io
              </div>
            </div>
            <div
              class="page-actions-container"
            />
          </div>
          <div>
            <div
              class="page-container"
            >
              <div
                class="content-main"
              >
                <div
                  class="sheet liferay-data-source-root"
                >
                  <div
                    class="sheet-header mb-1"
                  >
                    <h2
                      class="sheet-title"
                    >
                      Data Source Information
                    </h2>
                  </div>
                  <div
                    class="sheet-body"
                  >
                    <div
                      class="sheet-section"
                    >
                      <div
                        class="input-with-edit-toggle-root definition-item-root"
                      >
                        <form
                          class="form-root input-with-edit-toggle-editor"
                        >
                          <label
                            class="form-control-label label-root required"
                          >
                            <span
                              class="content-container"
                            >
                              Name
                            </span>
                          </label>
                          <div
                            class="form-group align-items-center form-group-autofit"
                          >
                            <div
                              class=""
                              style="flex-basis: 100%; flex-grow: 0;"
                            >
                              <div
                                class="input-group content-after"
                              >
                                <div
                                  class="input-group-item"
                                >
                                  <input
                                    class="input-root form-control"
                                    disabled=""
                                    id="dataSourceName"
                                    name="dataSourceName"
                                    type="text"
                                    value="Liferay123"
                                  />
                                </div>
                                <div
                                  class="input-group-item input-group-item-shrink"
                                >
                                  <button
                                    aria-label="Edit"
                                    class="button-root btn btn-sm btn-secondary"
                                    type="button"
                                  >
                                    <svg
                                      class="lexicon-icon lexicon-icon-pencil icon-root"
                                      role="presentation"
                                    >
                                      <use
                                        href="#pencil"
                                      />
                                    </svg>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </form>
                      </div>
                    </div>
                    <div
                      class="sheet-section"
                    >
                      <form
                        class="form-root dxp-instance-id-root"
                      >
                        <div
                          class="form-group"
                        >
                          <div
                            class="form-group-item d-flex mb-3"
                          >
                            <div
                              class=""
                              style="flex-basis: 100%; flex-grow: 0;"
                            >
                              <label
                                class="form-control-label label-root"
                                for="dxpInstanceId"
                              >
                                <span
                                  class="content-container"
                                >
                                  DXP Instance ID
                                </span>
                              </label>
                              <input
                                class="input-root form-control"
                                id="dxpInstanceId"
                                name="dxpInstanceId"
                                readonly=""
                                type="text"
                                value="123"
                              />
                            </div>
                          </div>
                          <div
                            class="form-group-item"
                          >
                            <button
                              class="button-root btn btn-secondary"
                              data-testid="disconnect-button"
                              type="button"
                            >
                              Disconnect
                            </button>
                          </div>
                        </div>
                      </form>
                    </div>
                    <div
                      class="sheet-section has-last-child-margin"
                    >
                      <div
                        class="mb-1 d-flex align-items-center"
                      >
                        <div
                          class="h4 mb-0 mr-2"
                        >
                          Synced Sites
                        </div>
                        <div
                          class="label label-root label-secondary label-lg label-uppercase"
                        >
                          <span
                            class="label-item"
                          >
                            Unconfigured
                          </span>
                        </div>
                      </div>
                      <p
                        class="description-secondary"
                      >
                        To configure sites, go to the Analytics Cloud configuration in your DXP Instance Settings, then select the sites you would like to start tracking.
                      </p>
                    </div>
                    <div
                      class="sheet-section has-last-child-margin"
                    >
                      <div
                        class="mb-1 d-flex align-items-center"
                      >
                        <div
                          class="h4 mb-0 mr-2"
                        >
                          Synced Contacts
                        </div>
                        <div
                          class="label label-root label-secondary label-lg label-uppercase"
                        >
                          <span
                            class="label-item"
                          >
                            Unconfigured
                          </span>
                        </div>
                      </div>
                      <p
                        class="description-secondary"
                      >
                        To configure contacts, go to the Analytics Cloud configuration in your DXP Instance Settings, then select which contacts you would like to sync.
                      </p>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="content-side"
              >
                <div
                  class="panel-root data-source-status-root"
                >
                  <div
                    class="panel-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="panel-title"
                    >
                      <div>
                        Current Status:
                      </div>
                    </div>
                    <div
                      class="panel-title-label"
                    >
                      <div
                        class="label label-root label-success label-lg label-uppercase"
                      >
                        <span
                          class="label-item"
                        >
                          Connected
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="panel-body"
                  >
                    You have successfully authenticated your token with your data source. You can now configure your data in DXP.
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`View should render a Salesforce data-source page 1`] = `
<div>
  <div
    class="settings-root"
  >
    <nav
      class="bg-white mb-4 tbar component-tbar"
    >
      <ul
        class="mx-4 tbar-nav"
      >
        <li
          class="tbar-item"
        >
          <div
            class="component-action"
          >
            <a
              aria-label="Back"
              class="text-secondary"
              href="/workspace/23"
            >
              <svg
                class="lexicon-icon lexicon-icon-angle-left mb-1"
                role="presentation"
              >
                <use
                  href="#angle-left"
                />
              </svg>
            </a>
          </div>
        </li>
        <li
          class="pl-0 tbar-item"
        >
          <div
            class="tbar-section"
          >
            <span
              class="text-dark"
            >
              <span
                class="text-5 font-weight-bold"
              >
                Settings
              </span>
            </span>
          </div>
        </li>
      </ul>
    </nav>
    <div
      class="content-wrapper"
    >
      <nav
        class="section-side settings-side-bar"
      >
        <div>
          <h5
            class="section-title"
          >
            Workspace Data
          </h5>
          <ul
            class="nav"
          >
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/apis/tokens"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_api icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_api"
                    />
                  </svg>
                </span>
                APIs
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/definitions"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-definitions icon-root"
                    role="presentation"
                  >
                    <use
                      href="#definitions"
                    />
                  </svg>
                </span>
                Definitions
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/data-privacy"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-data_privacy_lock icon-root"
                    role="presentation"
                  >
                    <use
                      href="#data_privacy_lock"
                    />
                  </svg>
                </span>
                Data Control & Privacy
              </a>
            </li>
            <li
              class="item active"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/data-source"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-faro_data_source icon-root"
                    role="presentation"
                  >
                    <use
                      href="#faro_data_source"
                    />
                  </svg>
                </span>
                Data Sources
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/recommendations"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_star icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_star"
                    />
                  </svg>
                </span>
                Recommendations
              </a>
            </li>
          </ul>
        </div>
        <div>
          <h5
            class="section-title"
          >
            Workspace Settings
          </h5>
          <ul
            class="nav"
          >
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/users"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-user_management icon-root"
                    role="presentation"
                  >
                    <use
                      href="#user_management"
                    />
                  </svg>
                </span>
                User Management
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/properties"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_page icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_page"
                    />
                  </svg>
                </span>
                Properties
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/usage"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-usage icon-root"
                    role="presentation"
                  >
                    <use
                      href="#usage"
                    />
                  </svg>
                </span>
                Subscription & Usage
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/workspace"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-cog icon-root"
                    role="presentation"
                  >
                    <use
                      href="#cog"
                    />
                  </svg>
                </span>
                Workspace
              </a>
            </li>
          </ul>
        </div>
      </nav>
      <div
        class="content section-main"
      >
        <div
          class="settings-base-page-root data-source-base-page-root salesforce-data-source-root"
        >
          <div
            class="maintenance-alert-root"
          />
          <ol
            class="breadcrumb breadcrumbs-root"
          >
            <li
              class="breadcrumb-item"
            >
              <a
                class="breadcrumb-text-truncate breadcrumb-link"
                href="/workspace/23/settings/data-source"
              >
                Data Sources
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <span
                class="breadcrumb-text-truncate"
              >
                Salesforce{seed}
              </span>
            </li>
          </ol>
          <div
            class="content-header"
          >
            <div
              class="header-text"
            >
              <div
                class="d-flex"
              >
                <h3
                  class="title-text text-truncate"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    Configure Salesforce
                  </span>
                </h3>
              </div>
              <div
                class="description"
              >
                Salesforce{seed} - https://login.salesforce.com
              </div>
            </div>
            <div
              class="page-actions-container"
            />
          </div>
          <div>
            <div
              class="page-container"
            >
              <div
                class="content-main"
              >
                <div
                  class="sheet data-source-base-tabs-root page-display"
                >
                  <div
                    class="sheet-body"
                  >
                    <ul
                      class="nav-root nav nav-underline"
                      role="tablist"
                    >
                      <li
                        class="nav-item active"
                        role="presentation"
                      >
                        <a
                          class="nav-link active"
                          href="/workspace/23/settings/data-source/24"
                          role="tab"
                        >
                          <div
                            class="h4"
                          >
                            Authorization
                          </div>
                        </a>
                      </li>
                      <li
                        class="nav-item"
                        role="presentation"
                      >
                        <a
                          class="nav-link"
                          href="/workspace/23/settings/data-source/24/salesforce/configuration-status"
                          role="tab"
                        >
                          <div
                            class="h4"
                          >
                            Configure Data Source
                          </div>
                          <span
                            class="badge badge-primary ml-2"
                          >
                            <span
                              class="badge-item badge-item-expand"
                            >
                              2
                            </span>
                          </span>
                        </a>
                      </li>
                    </ul>
                  </div>
                  <form
                    class="form-root oauth-form-root"
                  >
                    <div
                      class="sheet-body"
                    >
                      <div
                        class="sheet-section"
                      >
                        <div
                          class="sheet-text"
                        >
                          Please enter the URL of the target instance to start configuring the 
                          Salesforce
                           Data Source. You will need to enter the credentials of the data source's administrator. If you need help setting this up, please refer to the 
                          <a
                            class=""
                            href="https://developer.salesforce.com/page/Connected_Apps"
                          >
                            documentation
                          </a>
                          .
                        </div>
                        <div
                          class="callback-url"
                        >
                          <b>
                            Analytics Cloud Callback URL:
                          </b>
                          <pre>
                            http://liferay.com/oauth/receive
                          </pre>
                        </div>
                      </div>
                      <div
                        class="sheet-section"
                      >
                        <h3
                          class="sheet-subtitle"
                        >
                          Data Source
                        </h3>
                        <div
                          class=""
                        >
                          <label
                            class="form-control-label label-root required"
                            for="dataSourceName"
                          >
                            <span
                              class="content-container"
                            >
                              Name
                            </span>
                          </label>
                          <input
                            class="input-root form-control"
                            disabled=""
                            id="dataSourceName"
                            name="dataSourceName"
                            type="text"
                            value="Salesforce{seed}"
                          />
                        </div>
                        <div
                          class=""
                        >
                          <label
                            class="form-control-label label-root required"
                            for="url"
                          >
                            <span
                              class="content-container"
                            >
                              URL
                            </span>
                          </label>
                          <input
                            class="input-root form-control"
                            disabled=""
                            id="url"
                            name="url"
                            type="text"
                            value="https://login.salesforce.com"
                          />
                        </div>
                      </div>
                      <div
                        class="sheet-section"
                      >
                        <h3
                          class="sheet-subtitle"
                        >
                          Client Credentials
                        </h3>
                        <div
                          class=""
                        >
                          <label
                            class="form-control-label label-root required"
                            for="consumerKey"
                          >
                            <span
                              class="content-container"
                            >
                              Consumer Key/Client ID
                            </span>
                          </label>
                          <input
                            autocomplete="new-password"
                            class="input-root form-control"
                            disabled=""
                            id="consumerKey"
                            name="consumerKey"
                            type="text"
                            value="oAuthMockClientId-1"
                          />
                        </div>
                        <div
                          class=""
                        >
                          <label
                            class="form-control-label label-root required"
                            for="consumerSecret"
                          >
                            <span
                              class="content-container"
                            >
                              Consumer Secret/Client Secret
                            </span>
                          </label>
                          <div
                            class="input-group"
                          >
                            <div
                              class="input-group-item"
                            >
                              <input
                                autocomplete="new-password"
                                class="input-root form-control input-group-inset input-group-inset-after"
                                disabled=""
                                id="consumerSecret"
                                name="consumerSecret"
                                type="password"
                                value="oAuthMockClientSecret-1"
                              />
                              <div
                                class="input-group-inset-item input-group-inset-item-after"
                              >
                                <button
                                  aria-label="Watch"
                                  class="button-root btn btn-unstyled"
                                  disabled=""
                                  type="button"
                                >
                                  <svg
                                    class="lexicon-icon lexicon-icon-view icon-root"
                                    role="presentation"
                                  >
                                    <use
                                      href="#view"
                                    />
                                  </svg>
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sheet-section"
                      >
                        <h5>
                          OAuth Owner
                        </h5>
                        <div
                          class="oauth-owner disabled"
                        >
                          <em>
                            Authorize to add a new owner.
                          </em>
                        </div>
                      </div>
                    </div>
                    <div
                      class="sheet-footer form-actions"
                    >
                      <button
                        class="button-root edit btn btn-secondary"
                        type="button"
                      >
                        Edit
                      </button>
                    </div>
                  </form>
                </div>
              </div>
              <div
                class="content-side"
              >
                <div
                  class="panel-root data-source-status-root"
                >
                  <div
                    class="panel-header"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="panel-title"
                    >
                      <div>
                        Current Status:
                      </div>
                    </div>
                    <div
                      class="panel-title-label"
                    >
                      <div
                        class="label label-root label-info label-lg label-uppercase"
                      >
                        <span
                          class="label-item"
                        >
                          Authenticated
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="panel-body"
                  >
                    You have successfully authenticated your client id and secret with you data source. You can now configure your data.
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
